padding in selected

--- a/cuma/hamim.html
+++ b/cuma/hamim.html
@@ -49,9 +49,9 @@
     .selected {
       color: white;
       background: #a22;
+      padding: 2px 0
     }
     td:nth-child(1) > .selected {
-      padding: 2px 0
     }
     span[data]:hover {
       cursor: pointer;
@@ -67,7 +67,7 @@
     <td>
 <a class=sure href="/Kuran/reader.html#v=40:1" target="iqra">40 Mumin</a>
 <span data="hamim">Hâ Mîm</span> *
-(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Elm">Bilen</span> <span data="{ll~ah">Allah’tandır</span>. *
+(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Elm">Bilen</span> <span data="{ll~ah">Allah</span>’tandır. *
 O, <span data="*nb">günahı</span> <span data="gfr">bağışlayan</span>, <span data="twb">tevbeyi</span> <span data="qbl">kabul eden</span>, <span data="Eqb">azabı</span> <span data="$dd">şiddetli</span> olandır, <span data="Twl">lütuf</span> sahibidir. O’ndan başka <span data="Alh">ilah</span> yoktur, <span data="Syr">dönüş</span> yalnızca O’nadır.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=40:1" target="iqra">غافر</a>
@@ -79,7 +79,7 @@ O, <span data="*nb">günahı</span> <span data="gfr">bağışlayan</span>, <span
 <a class=sure href="/Kuran/reader.html#v=41:1" target="iqra">41 Fussilet</a>
 <span data="hamim">Hâ Mîm</span> *
 (Bu kitabın) <span data="nzl">indirilişi</span> <span data="rHm">Rahmân</span> ve <span data="rHm">Rahîm</span> katındandır. *
-(Bu), <span data="Ayy">ayetleri</span> <span data="Erb">Arapça</span> bir <span data="qrA">Kur’an</span> olarak <span data="fSl">açıklanmış</span>, <span data="Elm">bilen</span> bir <span data="qwm">toplum</span> için <span data="b$r">müjdeleyici</span> ve <span data="n*r">uyarıcı</span> bir <span data="ktb">kitaptır</span>. * Fakat <span data="kvr">onların çoğu</span> <span data="ErD">yüz çevirdi</span>, artık <span data="smE">dinlemezler</span>.
+<span data="Ayy">Ayetleri</span> <span data="Erb">Arapça</span> bir <span data="qrA">Kur’an</span> olarak <span data="fSl">açıklanmış</span>, <span data="Elm">bilen</span> bir <span data="qwm">toplum</span> için <span data="b$r">müjdeleyici</span> ve <span data="n*r">uyarıcı</span> bir <span data="ktb">kitaptır</span>. * Fakat <span data="kvr">onların çoğu</span> <span data="ErD">yüz çevirdi</span>, artık <span data="smE">dinlemezler</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=41:1" target="iqra">فصلت</a>
 <span data="hamim">حمٓ</span> *
@@ -105,7 +105,7 @@ O, <span data="*nb">günahı</span> <span data="gfr">bağışlayan</span>, <span
 <span data="hamim">Hâ Mîm</span> *
 <span data="byn">Apaçık</span> <span data="ktb">Kitaba</span> yemin olsun ki *
 Şüphesiz biz <span data="Eql">akıl edesiniz</span> diye onu <span data="Erb">Arapça</span> bir <span data="qrA">Kur’an</span> <span data="jEl">yaptık</span>. *
-O, katımızdaki <span data="Amm">Ana</span> <span data="ktb">Kitap’tadır</span>; <span data="Elw">yüce</span> ve <span data="Hkm">hikmetlidir</span>.
+O, katımızdaki <span data="Amm">Ana</span> <span data="ktb">Kitap</span>’tadır; <span data="Elw">yüce</span> ve <span data="Hkm">hikmetlidir</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=43:1" target="iqra">الزخرف</a>
 <span data="hamim">حمٓ</span> *
@@ -129,9 +129,9 @@ Biz onu (Kur’an’ı) <span data="brk">bereketli</span> bir <span data="lyl">g
     <td>
 <a class=sure href="/Kuran/reader.html#v=45:1" target="iqra">45 Câsiye</a>
 <span data="hamim">Hâ Mîm</span> *
-(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Hkm">Hikmetli</span> <span data="{ll~ah">Allah’tandır</span>. *
-Şüphesiz ki <span data="smw">göklerde</span> ve <span data="ArD">yerde</span> <span data="Amn">inananlar</span> için <span data="Ayy">dersler</span> vardır. *
-Sizin <span data="xlq">yaratılışınızda</span> ve (yeryüzünde) <span data="bvv">yaydığı</span> <span data="dbb">canlılarda</span>, kesin bir şekilde <span data="yqn">inanan</span> bir <span data="qwm">toplum</span> için <span data="Ayy">dersler</span> vardır.
+(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Hkm">Hikmetli</span> <span data="{ll~ah">Allah</span>’tandır. *
+Şüphesiz ki <span data="smw">göklerde</span> ve <span data="ArD">yerde</span> <span data="Amn">inananlar</span> için <span data="Ayy">ayetler</span> vardır. *
+Sizin <span data="xlq">yaratılışınızda</span> ve (yeryüzünde) <span data="bvv">yaydığı</span> <span data="dbb">canlılarda</span>, kesin bir şekilde <span data="yqn">inanan</span> bir <span data="qwm">toplum</span> için <span data="Ayy">ayetler</span> vardır.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=45:1" target="iqra">الجاثية</a>
 <span data="hamim">حمٓ</span> *
@@ -142,7 +142,7 @@ Sizin <span data="xlq">yaratılışınızda</span> ve (yeryüzünde) <span data=
     <td>
 <a class=sure href="/Kuran/reader.html#v=46:1" target="iqra">46 Ahkaf</a>
 <span data="hamim">Hâ Mîm</span> *
-(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Hkm">Hikmetli</span> <span data="{ll~ah">Allah’tandır</span>. *
+(Bu) <span data="ktb">Kitabın</span> <span data="nzl">indirilişi</span>, <span data="Ezz">Güçlü</span> ve <span data="Hkm">Hikmetli</span> <span data="{ll~ah">Allah</span>’tandır. *
 Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data="ara">ikisi arasındakileri</span> ancak bir <span data="Hqq">amaç ile</span> ve <span data="smw">belirli</span> bir <span data="Ajl">süre için</span> <span data="xlq">yarattık</span>. <span data="kfr">Kâfir</span> olanlar, <span data="n*r">uyarıldıkları</span> şeylerden <span data="ErD">yüz çevirmektedir</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=46:1" target="iqra">الأحقاف</a>
@@ -175,5 +175,3 @@ tablo.onclick = e => {
     // console.log(d)
 }
 </script>
-
-<script src="init.js"></script>
