--- a/cuma/hamim.html
+++ b/cuma/hamim.html
@@ -35,8 +35,8 @@
       text-align: right;
     }
     .sure {
-      color: #ff6;
-      background: #44f;
+      color: white;
+      background: #a22;
       display: inline-block;
       font-family: Arial, Helvetica, sans-serif;
       font-style: normal;
@@ -47,11 +47,9 @@
         background: #555;
     }
     .selected {
-      color: white;
-      background: #a22;
+      color: yellow;
+      background: blue;
       padding: 2px 0
-    }
-    td:nth-child(1) > .selected {
     }
     span[data]:hover {
       cursor: pointer;
