--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -61,16 +61,15 @@
 sûre olmasın, cümle olmasın, kelime bile olmasın da
 anlamsız görünen bir tek harf olsun" diyor.</p>
 <blockquote>
-Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki: <br>
+Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki:
 "Ben sizden beliğ mânâları, hükümleri, hakikatleri ifade eden yüksek hutbeleri ve nutukları istemiyorum. Yalnız şu tâdâd ettiğim harflerden bir nazîre yapınız, velev iftira ve hikâyelerden ibaret bile olursa olsun!"</blockquote>
 
 <p>Bunlardan tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
 <b>Sâd, Qâf, Nûn</b>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
-<p>Sonra iki harfliler: <b>Tâ-Hâ, Tâ-Sîn, Yâ-Sîn, </b>7x<b>Hâ-Mîm</b> (10 sûre) </p>
-<p>Üç harfliler: 6x<b>Elif-Lâm-Mîm, </b>5x<b>Elif-Lâm-Râ, </b>2x<b>Tâ-Sîn-Mîm, Ayn-Sîn-Qâf</b> (14 sûre) </p>
-<p>Dört harfliler: <b>Elif-Lâm-Mîm-Sâd, Elif-Lâm-Mîm-Râ</b> (2 sûre) </p>
-<p>Bir sûre 5 harfli şifre ile başlıyor: <b>Kâf-Hâ-Yâ-Ayn-Sâd</b> (Toplam 29 sûre) </p>
-<p>Bu çalışma Hâ-Mîm ile başlayan 7 sûre ile başlamıştı. Şimdi Elif-Lâm'ların eklenmesiyle 20 sûre oldu. <!-- 29 sûrenin hepsini kapsıyor. --> Kavramlar arasındaki ilişkiyi, kelimelere tıklayarak görebilirsiniz.
+<p>Sonra iki harfliler: <b>Tâ-Hâ, Tâ-Sîn, Yâ-Sîn, </b>7x<b>Hâ-Mîm</b> (10 ayet) </p>
+<p>Üç harfliler: 6x<b>Elif-Lâm-Mîm, </b>5x<b>Elif-Lâm-Râ, </b>2x<b>Tâ-Sîn-Mîm, Ayn-Sîn-Qâf</b> (14 ayet) </p>
+<p>Çok harfliler: <b>Elif-Lâm-Mîm-Sâd, Elif-Lâm-Mîm-Râ</b>, <b>Kâf-Hâ-Yâ-Ayn-Sâd</b> (3 ayet) </p>
+<p>Toplam 29 sûrede 30 ayet söz konusu. Bu çalışma 7 adet Hâ-Mîm ile başlamıştı. sonra Elif-Lâm'ların eklenmesiyle 20 sûre oldu. Şimdi, 29 sûrenin ilk birkaç ayetini ve mealini bu sayfaya aldık. Kavramlar arasındaki ilişkiyi, kelimelere tıklayarak görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil)
 </p>
 <table id=tablo>
   <tr>
@@ -161,12 +160,61 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 <span data="harf">الٓر</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=qrA>وَقُرْءَانٍ</span> <span data=byn>مُّبِينٍ</span>*
 رُّبَمَا <span data=wdd>يَوَدُّ</span> ٱلَّذِينَ <span data=kfr>كَفَرُوا۟</span> لَوْ <span data=kwn>كَانُوا۟</span> <span data=slm>مُسْلِمِينَ</span>*
 <span data=w*r>ذَرْهُمْ</span> <span data=Akl>يَأْكُلُوا۟</span> <span data=mtE>وَيَتَمَتَّعُوا۟</span> <span data=lhw>وَيُلْهِهِمُ</span> <span data=Aml>ٱلْأَمَلُ</span> فَسَوْفَ <span data=Elm>يَعْلَمُونَ</span><br>
-
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=19:1" target="iqra">19 Meryem</a>
+<span data="harf">Kâf Hâ Yâ Ayn Sâd</span>. (Bu), Rabbinin Zekeriya kuluna rahmetini hatırlatmasıdır. * Hani o, gizli bir sesle Rabbine şöyle seslenmişti: * “Rabbim! Kemiklerim zayıfladı, saçım başım ağardı. Rabbim, senden isteklerim konusunda (bu zamana kadar) hiç mahrum kalmadım.”
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=19:1" target="iqra">مريم</a>
+<span data="harf">كٓهيعٓصٓ</span> *
+<span data=*kr>ذِكْرُ</span> <span data=rHm>رَحْمَتِ</span> <span data=rbb>رَبِّكَ</span> <span data=Ebd>عَبْدَهُۥ</span> <span data=zakariy~aA>زَكَرِيَّآ</span>*
+إِذْ <span data=ndw>نَادَىٰ</span> <span data=rbb>رَبَّهُۥ</span> <span data=ndw>نِدَآءً</span> <span data=xfy>خَفِيًّا</span>*
+<span data=qwl>قَالَ</span> <span data=rbb>رَبِّ</span> إِنِّى <span data=whn>وَهَنَ</span> <span data=EZm>ٱلْعَظْمُ</span> مِنِّى <span data=$El>وَٱشْتَعَلَ</span> <span data=rAs>ٱلرَّأْسُ</span> <span data=$yb>شَيْبًا</span> وَلَمْ <span data=kwn>أَكُنۢ</span> <span data=dEw>بِدُعَآئِكَ</span> <span data=rbb>رَبِّ</span> <span data=$qw>شَقِيًّا</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=20:1" target="iqra">20 Taha</a>
+<span data="harf">Tâ Hâ</span>. * Biz Kur’an’ı sana sıkıntı çekesin diye indirmedik. * Yeri ve en yüksek gökleri yaratan (Allah)’ın indirmesi olarak saygı duyanlara sadece (gerçeği) hatırlatmak için (gönderdik).
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=20:1" target="iqra">طه</a>
+<span data="harf">طه</span> *
+مَآ <span data=nzl>أَنزَلْنَا</span> عَلَيْكَ <span data=qrA>ٱلْقُرْءَانَ</span> <span data=$qw>لِتَشْقَىٰٓ</span>*
+إِلَّا <span data=*kr>تَذْكِرَةً</span> لِّمَن <span data=x$y>يَخْشَىٰ</span>*
+<span data=nzl>تَنزِيلًا</span> مِّمَّنْ <span data=xlq>خَلَقَ</span> <span data=ArD>ٱلْأَرْضَ</span> <span data=smw>وَٱلسَّمَٰوَٰتِ</span> <span data=Elw>ٱلْعُلَى</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=26:1" target="iqra">26 Şuara</a>
+<span data="harf">Tâ Sîn Mîm</span>. * 
+İşte şu(nlar), apaçık Kitabın ayetleridir. * Onlar iman etmiyor diye nerdeyse kendine yazık edeceksin! * Dilesek, üzerlerine gökten bir ayet indiririz de ona boyunları eğik kalır.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=26:1" target="iqra">الشعراء</a>
+<span data="harf">طسٓمٓ</span> *
+تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span>*
+لَعَلَّكَ <span data=bxE>بَٰخِعٌ</span> <span data=nfs>نَّفْسَكَ</span> أَلَّا <span data=kwn>يَكُونُوا۟</span> <span data=Amn>مُؤْمِنِينَ</span>*
+إِن <span data=$yA>نَّشَأْ</span> <span data=nzl>نُنَزِّلْ</span> عَلَيْهِم مِّنَ <span data=smw>ٱلسَّمَآءِ</span> <span data=Ayy>ءَايَةً</span> <span data=Zll>فَظَلَّتْ</span> <span data=Enq>أَعْنَٰقُهُمْ</span> لَهَا <span data=xDE>خَٰضِعِينَ</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">27 Neml</a>
+<span data="harf">Tâ Sîn </span>. * 
+İşte şu(nlar) Kur’an’ın ve apaçık Kitabın ayetleridir. * (Kur’an) müminler için bir rehber ve müjdedir. * Onlar namazı kılar, zekatı verir ve ahirete de kesin bir şekilde inanırlar.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">النمل</a>
+<span data="harf">طسٓ</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=qrA>ٱلْقُرْءَانِ</span> <span data=ktb>وَكِتَابٍ</span> <span data=byn>مُّبِينٍ</span>*
+<span data=hdy>هُدًى</span> <span data=b$r>وَبُشْرَىٰ</span> <span data=Amn>لِلْمُؤْمِنِينَ</span>*
+ٱلَّذِينَ <span data=qwm>يُقِيمُونَ</span> <span data=Slw>ٱلصَّلَوٰةَ</span> <span data=Aty>وَيُؤْتُونَ</span> <span data=zkw>ٱلزَّكَوٰةَ</span> وَهُم <span data=Axr>بِٱلْءَاخِرَةِ</span> هُمْ <span data=yqn>يُوقِنُونَ</span><br>  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">28 Kasas</a>
+<span data="harf">Tâ Sîn Mîm</span>. * 
+İşte şu(nlar), apaçık Kitabın ayetleridir. * İman edecek bir toplum için Musa ile Firavun’un haberinden bir kısmını sana bir amaç ile tilavet etmekteyiz (okuyup aktarmaktayız).
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">القصص</a>
+<span data="harf">طسٓمٓ</span> *
+تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span>*
+<span data=tlw>نَتْلُوا۟</span> عَلَيْكَ مِن <span data=nbA>نَّبَإِ</span> <span data=muwsaY`>مُوسَىٰ</span> <span data=firoEawon>وَفِرْعَوْنَ</span> <span data=Hqq>بِٱلْحَقِّ</span> <span data=qwm>لِقَوْمٍ</span> <span data=Amn>يُؤْمِنُونَ</span><br>
   <tr>
     <td>
 <a class=sure href="/Kuran/reader.html#v=29:1" target="iqra">29 Ankebût</a>
 <span data="harf">Elif Lâm Mîm</span> *
-İnsanlar, imtihan edilmeden sadece “İman ettik!” demeleriyle bırakılacaklarını mı sandılar! * Yemin olsun ki biz onlardan öncekileri de imtihan etmiştik. Elbette Allah doğruları bil(dir)ip (ortaya çıkaracak)tır; yalancıları da mutlaka bil(dir)ip (ortaya çıkaracaktır).
+İnsanlar, imtihan edilmeden sadece “İman ettik!” demeleriyle bırakılacaklarını mı sandılar! * Yemin olsun ki biz onlardan öncekileri de imtihan etmiştik. Elbette Allah doğruları bil(dir)ecek (ortaya çıkaracak), yalancıları da mutlaka bil(dir)ecektir.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=29:1" target="iqra">العنكبوت</a>
 <span data="harf">الٓمٓ</span> *
@@ -204,6 +252,28 @@ Kendisinde hiçbir şüphe bulunmayan bu Kitabın indirilişi âlemlerin Rabbind
 <span data="harf">الٓمٓ</span> *
 <span data=nzl>تَنزِيلُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> لَا <span data=ryb>رَيْبَ</span> فِيهِ مِن <span data=rbb>رَّبِّ</span> <span data=Elm>ٱلْعَٰلَمِينَ</span>*
 أَمْ <span data=qwl>يَقُولُونَ</span> <span data=fry>ٱفْتَرَىٰهُ</span> بَلْ هُوَ <span data=Hqq>ٱلْحَقُّ</span> مِن <span data=rbb>رَّبِّكَ</span> <span data=n*r>لِتُنذِرَ</span> <span data=qwm>قَوْمًا</span> مَّآ <span data=Aty>أَتَىٰهُم</span> مِّن <span data=n*r>نَّذِيرٍ</span> مِّن <span data=qbl>قَبْلِكَ</span> لَعَلَّهُمْ <span data=hdy>يَهْتَدُونَ</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=36:1" target="iqra">36 Yasin</a>
+<span data="harf">Yâ Sîn</span> *
+Hikmetli Kur’an’a (yemin olsun) ki * Şüphesiz ki sen, elçilerdensin, * doğru yol üzerindesin. * Güçlü ve Merhametli (Allah) tarafından indirilmiştir.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=36:1" target="iqra">يس</a>
+<span data="harf">يسٓ</span> *
+<span data=qrA>وَٱلْقُرْءَانِ</span> <span data=Hkm>ٱلْحَكِيمِ</span>*
+إِنَّكَ لَمِنَ <span data=rsl>ٱلْمُرْسَلِينَ</span>*
+عَلَىٰ <span data=SrT>صِرَٰطٍ</span> <span data=qwm>مُّسْتَقِيمٍ</span>*
+<span data=nzl>تَنزِيلَ</span> <span data=Ezz>ٱلْعَزِيزِ</span> <span data=rHm>ٱلرَّحِيمِ</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=38:1" target="iqra">38 Sad</a>
+<span data="harf">Sâd</span>. *
+Zikr sahibi Kur’an’a (yemin olsun). * Aslında kâfir olanlar, (haksız) bir gurur ve ayrılık içindedir. * Onlardan önce nice nesilleri helak etmiştik de feryat etmişlerdi, (ancak) kurtulmaları mümkün değildi.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=38:1" target="iqra">ص</a>
+<span data="harf">صٓ</span>  <span data=qrA>وَٱلْقُرْءَانِ</span> ذِى <span data=*kr>ٱلذِّكْرِ</span>*
+بَلِ ٱلَّذِينَ <span data=kfr>كَفَرُوا۟</span> فِى <span data=Ezz>عِزَّةٍ</span> <span data=$qq>وَشِقَاقٍ</span>*
+كَمْ <span data=hlk>أَهْلَكْنَا</span> مِن <span data=qbl>قَبْلِهِم</span> مِّن <span data=qrn>قَرْنٍ</span> <span data=ndw>فَنَادَوا۟</span> <span data=lwt>وَّلَاتَ</span> <span data=Hyn>حِينَ</span> <span data=nwS>مَنَاصٍ</span><br>
   <tr>
     <td>
 <a class=sure href="/Kuran/reader.html#v=40:1" target="iqra">40 Mumin</a>
@@ -290,7 +360,28 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 <span data="harf">حمٓ</span> *
 <span data="nzl">تَنزِيلُ</span> <span data="ktb">ٱلْكِتَٰبِ</span> مِنَ <span data="{ll~ah">ٱللَّهِ</span> <span data="Ezz">ٱلْعَزِيزِ</span> <span data="Hkm">ٱلْحَكِيمِ</span> *
 مَا <span data="xlq">خَلَقْنَا</span> <span data="smw">ٱلسَّمَٰوَٰتِ</span> <span data="ArD">وَٱلْأَرْضَ</span> <span data="ara">وَمَا بَيْنَهُمَآ</span> إِلَّا <span data="Hqq">بِٱلْحَقِّ</span> <span data="Ajl">وَأَجَلٍ</span> <span data="smw">مُّسَمًّى</span> وَٱلَّذِينَ <span data="kfr">كَفَرُوا۟</span> عَمَّآ <span data="n*r">أُنذِرُوا۟</span> <span data="ErD">مُعْرِضُونَ</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=50:1" target="iqra">50 Kaf</a>
+<span data="harf">Qâf</span>. <span data=mjd>Yüce</span> <span data=qrA>Kur’an</span>’a (yemin olsun). *
+<span data=kfr>Kâfirler</span> içlerinden bir <span data=n*r>uyarıcının</span> <span data=jyA>gelmesine</span> <span data=Ejb>şaştılar</span> ve “Bu, <span data=Ejb>şaşılacak</span> bir <span data=$yA>şey</span>! * <span data=mwt>Öldüğümüz</span> ve <span data=trb>toprak</span> <span data=kwn>olduğumuz</span> zaman mı? Bu, <span data=bEd>(akla) uzak</span> bir <span data=rjE>dönüş</span>!” <span data=qwl>dediler</span>.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=50:1" target="iqra">ق</a>
+<span data="harf">قٓ</span>  <span data=qrA>وَٱلْقُرْءَانِ</span> <span data=mjd>ٱلْمَجِيدِ</span>*
+بَلْ <span data=Ejb>عَجِبُوٓا۟</span> أَن <span data=jyA>جَآءَهُم</span> <span data=n*r>مُّنذِرٌ</span> مِّنْهُمْ <span data=qwl>فَقَالَ</span> <span data=kfr>ٱلْكَٰفِرُونَ</span> هَٰذَا <span data=$yA>شَىْءٌ</span> <span data=Ejb>عَجِيبٌ</span>*
+أَءِذَا <span data=mwt>مِتْنَا</span> <span data=kwn>وَكُنَّا</span> <span data=trb>تُرَابًا</span> ذَٰلِكَ <span data=rjE>رَجْعٌۢ</span> <span data=bEd>بَعِيدٌ</span><br>
+  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=68:1" target="iqra">68 Kalem</a>
+<span data="harf">Nûn</span>. <span data=qlm>Kaleme</span> ve <span data=sTr>satır satır</span> yazdıklarına (yemin olsun). * <span data=rbb>Rabbinin</span> <span data=nEm>nimeti</span> sayesinde sen asla <span data=jnn>cinlenmiş</span> değilsin. * Senin için başa <span data=mnn>kakılmayan</span> (kesintisiz) bir <span data=Ajr>ödül</span> vardır. * Sen elbette <span data=EZm>yüce</span> bir <span data=xlq>ahlak</span> üzeresin.
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=68:1" target="iqra">القلم</a>
+<span data="harf">نٓ</span>  <span data=qlm>وَٱلْقَلَمِ</span> وَمَا <span data=sTr>يَسْطُرُونَ</span>*
+مَآ أَنتَ <span data=nEm>بِنِعْمَةِ</span> <span data=rbb>رَبِّكَ</span> <span data=jnn>بِمَجْنُونٍ</span>*
+وَإِنَّ لَكَ <span data=Ajr>لَأَجْرًا</span> <span data=gyr>غَيْرَ</span> <span data=mnn>مَمْنُونٍ</span>*
+وَإِنَّكَ لَعَلَىٰ <span data=xlq>خُلُقٍ</span> <span data=EZm>عَظِيمٍ</span><br>
 </table>
+
 <h3>Özet Tablo</h3>
 <pre>
  2 Alm      20 Th       40 Hm
@@ -331,4 +422,27 @@ tablo.onclick = e => {
     })
     // console.log(d)
 }
+/** in order to get the HTML data shown above:
+* open https://okuyun.github.io/Kuran/reader
+* define the snippets below
+* run chapToHTML(2, 4) ...
+// c: chapter [1-114], n: number of verses
+chapToHTML = (c,n) => { 
+    let i = indexOf(c,1)
+    let s = Q.qur.data.slice(i,i+n).map(verseToHTML).join('*\n')
+    console.log(header(c)+s+'<br>\n')
+}
+header = c => `  <tr>
+    <td>
+<a class=sure href="/Kuran/reader.html#v=${c}:1" target="iqra">${c} ${suraNames.tr[c]}</a>
+<span data="harf"></span> 
+    <td class=ayet>
+<a class=sure href="/Kuran/reader.html#v=${c}:1" target="iqra">${suraNames.ar[c]}</a>
+<span data="harf"></span> `
+verseToHTML = s => s.split(' ').slice(1).map(wordToHTML).join(' ')
+wordToHTML = x => {
+    let r = Q.roots.wordToRoot(toBuckwalter(x));
+    return r? '<span data='+r+'>'+x+'</span>': x
+}
+ */
 </script>
