--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -48,6 +48,7 @@
     }
     a:hover {
       font-weight: normal;
+      color: white;
     }
     span[data]:hover {
       cursor: pointer;
@@ -56,7 +57,7 @@
 
 <h2>Şifreli Harfler &emsp; <button class=goBack>◀</button></h2>
 
-<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz     unsuru bazı sûrelerin başındaki şifreli harfler.  Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bırakıyoruz.</p>
+<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz     unsuru bazı sûrelerin başındaki şifreli harfler.  Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bıraayetıyoruz.</p>
 <p>"Haydi, buna benzer bir söz söyleyin; kitap olmasın,
 sûre olmasın, cümle olmasın, kelime bile olmasın da
 anlamsız görünen bir tek harf olsun" diyor.</p>
@@ -64,12 +65,12 @@ anlamsız görünen bir tek harf olsun" diyor.</p>
 Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki:
 "Ben sizden beliğ mânâları, hükümleri, hakikatleri ifade eden yüksek hutbeleri ve nutukları istemiyorum. Yalnız şu tâdâd ettiğim harflerden bir nazîre yapınız, velev iftira ve hikâyelerden ibaret bile olursa olsun!"</blockquote>
 
-<p>Bunlardan tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
-<b>Sâd, Qâf, Nûn</b>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
-<p>Sonra iki harfliler: <b>Tâ-Hâ, Tâ-Sîn, Yâ-Sîn, </b>7x<b>Hâ-Mîm</b> (10 ayet) </p>
-<p>Üç harfliler: 6x<b>Elif-Lâm-Mîm, </b>5x<b>Elif-Lâm-Râ, </b>2x<b>Tâ-Sîn-Mîm, Ayn-Sîn-Qâf</b> (14 ayet) </p>
-<p>Çok harfliler: <b>Elif-Lâm-Mîm-Sâd, Elif-Lâm-Mîm-Râ</b>, <b>Kâf-Hâ-Yâ-Ayn-Sâd</b> (3 ayet) </p>
-<p>Toplam 29 sûrede 30 ayet söz konusu. Bu çalışma 7 adet Hâ-Mîm ile başlamıştı. sonra Elif-Lâm'ların eklenmesiyle 20 sûre oldu. Şimdi, 29 sûrenin ilk birkaç ayetini ve mealini bu sayfaya aldık. Kavramlar arasındaki ilişkiyi, kelimelere tıklayarak görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil)
+<p>Toplam 29 sûrenin başındaki 30 ayet söz konusu. Tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
+<a href=#sad>Sâd</a>, <a href=#qaf>Qâf</a>, <a href=#nun>Nûn</a>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
+<p>Sonra iki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 7x<a href=#gafir>Hâ-Mîm</a> (10 ayet) </p>
+<p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a>, <a href=#şura>Ayn-Sîn-Qâf</a> (14 ayet) </p>
+<p>Çok harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a>, <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a> (3 ayet) </p>
+<p>Bu çalışma 7 adet Hâ-Mîm ile başlamıştı. sonra Elif-Lâm'ların eklenmesiyle 20 sûre oldu. Şimdi, 29 sûrenin ilk birkaç ayetini ve mealini bu sayfaya aldık. Kavramlar arasındaki ilişkiyi, kelimelere tıklayarak görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil)
 </p>
 <table id=tablo>
   <tr>
@@ -93,7 +94,7 @@ Allah (ki) O’ndan başka ilah yoktur. Diridir, hayatı elinde tutandır. * O, 
 <span data="harf">الٓمٓ</span> *
 <span data={ll~ah>ٱللَّهُ</span> لَآ <span data=Alh>إِلَٰهَ</span> إِلَّا هُوَ <span data=Hyy>ٱلْحَىُّ</span> <span data=qwm>ٱلْقَيُّومُ</span>*
 <span data=nzl>نَزَّلَ</span> عَلَيْكَ <span data=ktb>ٱلْكِتَٰبَ</span> <span data=Hqq>بِٱلْحَقِّ</span> <span data=Sdq>مُصَدِّقًا</span> لِّمَا <span data=byn>بَيْنَ</span> <span data=ydy>يَدَيْهِ</span> <span data=nzl>وَأَنزَلَ</span> <span data=t~aworaY`p>ٱلتَّوْرَىٰةَ</span> <span data=<injiyl>وَٱلْإِنجِيلَ</span><br>
-  <tr>
+  <tr id=araf>
     <td>
 <a class=sure href="/Kuran/reader.html#v=7:1" target="iqra">7 A'râf</a>
 <span data="harf">Elif Lâm Mîm Sâd</span> *
@@ -103,7 +104,7 @@ Kendisiyle uyarman için ve müminlere (gerçeği) hatırlatma olsun diye sana i
 <span data="harf">الٓمٓصٓ</span> *
 <span data=ktb>كِتَٰبٌ</span> <span data=nzl>أُنزِلَ</span> إِلَيْكَ فَلَا <span data=kwn>يَكُن</span> فِى <span data=Sdr>صَدْرِكَ</span> <span data=Hrj>حَرَجٌ</span> مِّنْهُ <span data=n*r>لِتُنذِرَ</span> بِهِۦ <span data=*kr>وَذِكْرَىٰ</span> <span data=Amn>لِلْمُؤْمِنِينَ</span>*
 <span data=tbE>ٱتَّبِعُوا۟</span> مَآ <span data=nzl>أُنزِلَ</span> إِلَيْكُم مِّن <span data=rbb>رَّبِّكُمْ</span> وَلَا <span data=tbE>تَتَّبِعُوا۟</span> مِن <span data=dwn>دُونِهِۦٓ</span> <span data=wly>أَوْلِيَآءَ</span> <span data=qll>قَلِيلًا</span> مَّا <span data=*kr>تَذَكَّرُونَ</span><br>
-<tr>
+<tr id=yunus>
   <td>
 <a class=sure href="/Kuran/reader.html#v=10:1" target="iqra">10 Yunus</a>
 <span data="harf">Elif Lâm Râ</span>. 
@@ -132,7 +133,7 @@ Kendisiyle uyarman için ve müminlere (gerçeği) hatırlatma olsun diye sana i
 <span data="harf">الٓر</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span>*
 إِنَّآ <span data=nzl>أَنزَلْنَٰهُ</span> <span data=qrA>قُرْءَٰنًا</span> <span data=Erb>عَرَبِيًّا</span> لَّعَلَّكُمْ <span data=Eql>تَعْقِلُونَ</span>*
 نَحْنُ <span data=qSS>نَقُصُّ</span> عَلَيْكَ <span data=Hsn>أَحْسَنَ</span> <span data=qSS>ٱلْقَصَصِ</span> بِمَآ <span data=wHy>أَوْحَيْنَآ</span> إِلَيْكَ هَٰذَا <span data=qrA>ٱلْقُرْءَانَ</span> وَإِن <span data=kwn>كُنتَ</span> مِن <span data=qbl>قَبْلِهِۦ</span> لَمِنَ <span data=gfl>ٱلْغَٰفِلِينَ</span><br>
-<tr>
+<tr id=rad>
   <td>
 <a class=sure href="/Kuran/reader.html#v=13:1" target="iqra">13 Rad</a>
 <span data="harf">Elif Lâm Mîm Râ</span>.
@@ -160,7 +161,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 <span data="harf">الٓر</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=qrA>وَقُرْءَانٍ</span> <span data=byn>مُّبِينٍ</span>*
 رُّبَمَا <span data=wdd>يَوَدُّ</span> ٱلَّذِينَ <span data=kfr>كَفَرُوا۟</span> لَوْ <span data=kwn>كَانُوا۟</span> <span data=slm>مُسْلِمِينَ</span>*
 <span data=w*r>ذَرْهُمْ</span> <span data=Akl>يَأْكُلُوا۟</span> <span data=mtE>وَيَتَمَتَّعُوا۟</span> <span data=lhw>وَيُلْهِهِمُ</span> <span data=Aml>ٱلْأَمَلُ</span> فَسَوْفَ <span data=Elm>يَعْلَمُونَ</span><br>
-  <tr>
+  <tr id=meryem>
     <td>
 <a class=sure href="/Kuran/reader.html#v=19:1" target="iqra">19 Meryem</a>
 <span data="harf">Kâf Hâ Yâ Ayn Sâd</span>. (Bu), Rabbinin Zekeriya kuluna rahmetini hatırlatmasıdır. * Hani o, gizli bir sesle Rabbine şöyle seslenmişti: * “Rabbim! Kemiklerim zayıfladı, saçım başım ağardı. Rabbim, senden isteklerim konusunda (bu zamana kadar) hiç mahrum kalmadım.”
@@ -170,7 +171,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 <span data=*kr>ذِكْرُ</span> <span data=rHm>رَحْمَتِ</span> <span data=rbb>رَبِّكَ</span> <span data=Ebd>عَبْدَهُۥ</span> <span data=zakariy~aA>زَكَرِيَّآ</span>*
 إِذْ <span data=ndw>نَادَىٰ</span> <span data=rbb>رَبَّهُۥ</span> <span data=ndw>نِدَآءً</span> <span data=xfy>خَفِيًّا</span>*
 <span data=qwl>قَالَ</span> <span data=rbb>رَبِّ</span> إِنِّى <span data=whn>وَهَنَ</span> <span data=EZm>ٱلْعَظْمُ</span> مِنِّى <span data=$El>وَٱشْتَعَلَ</span> <span data=rAs>ٱلرَّأْسُ</span> <span data=$yb>شَيْبًا</span> وَلَمْ <span data=kwn>أَكُنۢ</span> <span data=dEw>بِدُعَآئِكَ</span> <span data=rbb>رَبِّ</span> <span data=$qw>شَقِيًّا</span><br>
-  <tr>
+  <tr id=taha>
     <td>
 <a class=sure href="/Kuran/reader.html#v=20:1" target="iqra">20 Taha</a>
 <span data="harf">Tâ Hâ</span>. * Biz Kur’an’ı sana sıkıntı çekesin diye indirmedik. * Yeri ve en yüksek gökleri yaratan (Allah)’ın indirmesi olarak saygı duyanlara sadece (gerçeği) hatırlatmak için (gönderdik).
@@ -180,7 +181,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 مَآ <span data=nzl>أَنزَلْنَا</span> عَلَيْكَ <span data=qrA>ٱلْقُرْءَانَ</span> <span data=$qw>لِتَشْقَىٰٓ</span>*
 إِلَّا <span data=*kr>تَذْكِرَةً</span> لِّمَن <span data=x$y>يَخْشَىٰ</span>*
 <span data=nzl>تَنزِيلًا</span> مِّمَّنْ <span data=xlq>خَلَقَ</span> <span data=ArD>ٱلْأَرْضَ</span> <span data=smw>وَٱلسَّمَٰوَٰتِ</span> <span data=Elw>ٱلْعُلَى</span><br>
-  <tr>
+  <tr id=şuara>
     <td>
 <a class=sure href="/Kuran/reader.html#v=26:1" target="iqra">26 Şuara</a>
 <span data="harf">Tâ Sîn Mîm</span>. * 
@@ -191,7 +192,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span>*
 لَعَلَّكَ <span data=bxE>بَٰخِعٌ</span> <span data=nfs>نَّفْسَكَ</span> أَلَّا <span data=kwn>يَكُونُوا۟</span> <span data=Amn>مُؤْمِنِينَ</span>*
 إِن <span data=$yA>نَّشَأْ</span> <span data=nzl>نُنَزِّلْ</span> عَلَيْهِم مِّنَ <span data=smw>ٱلسَّمَآءِ</span> <span data=Ayy>ءَايَةً</span> <span data=Zll>فَظَلَّتْ</span> <span data=Enq>أَعْنَٰقُهُمْ</span> لَهَا <span data=xDE>خَٰضِعِينَ</span><br>
-  <tr>
+  <tr id=neml>
     <td>
 <a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">27 Neml</a>
 <span data="harf">Tâ Sîn </span>. * 
@@ -200,7 +201,8 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 <a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">النمل</a>
 <span data="harf">طسٓ</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=qrA>ٱلْقُرْءَانِ</span> <span data=ktb>وَكِتَابٍ</span> <span data=byn>مُّبِينٍ</span>*
 <span data=hdy>هُدًى</span> <span data=b$r>وَبُشْرَىٰ</span> <span data=Amn>لِلْمُؤْمِنِينَ</span>*
-ٱلَّذِينَ <span data=qwm>يُقِيمُونَ</span> <span data=Slw>ٱلصَّلَوٰةَ</span> <span data=Aty>وَيُؤْتُونَ</span> <span data=zkw>ٱلزَّكَوٰةَ</span> وَهُم <span data=Axr>بِٱلْءَاخِرَةِ</span> هُمْ <span data=yqn>يُوقِنُونَ</span><br>  <tr>
+ٱلَّذِينَ <span data=qwm>يُقِيمُونَ</span> <span data=Slw>ٱلصَّلَوٰةَ</span> <span data=Aty>وَيُؤْتُونَ</span> <span data=zkw>ٱلزَّكَوٰةَ</span> وَهُم <span data=Axr>بِٱلْءَاخِرَةِ</span> هُمْ <span data=yqn>يُوقِنُونَ</span><br>
+  <tr>
     <td>
 <a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">28 Kasas</a>
 <span data="harf">Tâ Sîn Mîm</span>. * 
@@ -210,7 +212,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
 <span data="harf">طسٓمٓ</span> *
 تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span>*
 <span data=tlw>نَتْلُوا۟</span> عَلَيْكَ مِن <span data=nbA>نَّبَإِ</span> <span data=muwsaY`>مُوسَىٰ</span> <span data=firoEawon>وَفِرْعَوْنَ</span> <span data=Hqq>بِٱلْحَقِّ</span> <span data=qwm>لِقَوْمٍ</span> <span data=Amn>يُؤْمِنُونَ</span><br>
-  <tr>
+  <tr id=ankebut>
     <td>
 <a class=sure href="/Kuran/reader.html#v=29:1" target="iqra">29 Ankebût</a>
 <span data="harf">Elif Lâm Mîm</span> *
@@ -252,7 +254,7 @@ Kendisinde hiçbir şüphe bulunmayan bu Kitabın indirilişi âlemlerin Rabbind
 <span data="harf">الٓمٓ</span> *
 <span data=nzl>تَنزِيلُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> لَا <span data=ryb>رَيْبَ</span> فِيهِ مِن <span data=rbb>رَّبِّ</span> <span data=Elm>ٱلْعَٰلَمِينَ</span>*
 أَمْ <span data=qwl>يَقُولُونَ</span> <span data=fry>ٱفْتَرَىٰهُ</span> بَلْ هُوَ <span data=Hqq>ٱلْحَقُّ</span> مِن <span data=rbb>رَّبِّكَ</span> <span data=n*r>لِتُنذِرَ</span> <span data=qwm>قَوْمًا</span> مَّآ <span data=Aty>أَتَىٰهُم</span> مِّن <span data=n*r>نَّذِيرٍ</span> مِّن <span data=qbl>قَبْلِكَ</span> لَعَلَّهُمْ <span data=hdy>يَهْتَدُونَ</span><br>
-  <tr>
+  <tr id=yasin>
     <td>
 <a class=sure href="/Kuran/reader.html#v=36:1" target="iqra">36 Yasin</a>
 <span data="harf">Yâ Sîn</span> *
@@ -264,7 +266,7 @@ Hikmetli Kur’an’a (yemin olsun) ki * Şüphesiz ki sen, elçilerdensin, * do
 إِنَّكَ لَمِنَ <span data=rsl>ٱلْمُرْسَلِينَ</span>*
 عَلَىٰ <span data=SrT>صِرَٰطٍ</span> <span data=qwm>مُّسْتَقِيمٍ</span>*
 <span data=nzl>تَنزِيلَ</span> <span data=Ezz>ٱلْعَزِيزِ</span> <span data=rHm>ٱلرَّحِيمِ</span><br>
-  <tr>
+  <tr id=sad>
     <td>
 <a class=sure href="/Kuran/reader.html#v=38:1" target="iqra">38 Sad</a>
 <span data="harf">Sâd</span>. *
@@ -274,7 +276,7 @@ Zikr sahibi Kur’an’a (yemin olsun). * Aslında kâfir olanlar, (haksız) bir
 <span data="harf">صٓ</span>  <span data=qrA>وَٱلْقُرْءَانِ</span> ذِى <span data=*kr>ٱلذِّكْرِ</span>*
 بَلِ ٱلَّذِينَ <span data=kfr>كَفَرُوا۟</span> فِى <span data=Ezz>عِزَّةٍ</span> <span data=$qq>وَشِقَاقٍ</span>*
 كَمْ <span data=hlk>أَهْلَكْنَا</span> مِن <span data=qbl>قَبْلِهِم</span> مِّن <span data=qrn>قَرْنٍ</span> <span data=ndw>فَنَادَوا۟</span> <span data=lwt>وَّلَاتَ</span> <span data=Hyn>حِينَ</span> <span data=nwS>مَنَاصٍ</span><br>
-  <tr>
+  <tr id=gafir>
     <td>
 <a class=sure href="/Kuran/reader.html#v=40:1" target="iqra">40 Mumin</a>
 <span data="harf">Hâ Mîm</span> *
@@ -297,7 +299,7 @@ O, <span data="*nb">günahı</span> <span data="gfr">bağışlayan</span>, <span
 <span data="nzl">تَنزِيلٌ</span> مِّنَ <span data="rHm">ٱلرَّحْمَٰنِ</span> <span data="rHm">ٱلرَّحِيمِ</span> *
 <span data="ktb">كِتَٰبٌ</span> <span data="fSl">فُصِّلَتْ</span> <span data="Ayy">ءَايَٰتُهُۥ</span> <span data="qrA">قُرْءَانًا</span> <span data="Erb">عَرَبِيًّا</span> <span data="qwm">لِّقَوْمٍ</span> <span data="Elm">يَعْلَمُونَ</span> *
 <span data="b$r">بَشِيرًا</span> <span data="n*r">وَنَذِيرًا</span> <span data="ErD">فَأَعْرَضَ</span> <span data="kvr">أَكْثَرُهُمْ</span> فَهُمْ لَا <span data="smE">يَسْمَعُونَ</span><br>
-  <tr>
+  <tr id=şura>
     <td>
 <a class=sure href="/Kuran/reader.html#v=42:1" target="iqra">42 Şûrâ</a>
 <span data="harf">Hâ Mîm</span> *
@@ -360,7 +362,7 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 <span data="harf">حمٓ</span> *
 <span data="nzl">تَنزِيلُ</span> <span data="ktb">ٱلْكِتَٰبِ</span> مِنَ <span data="{ll~ah">ٱللَّهِ</span> <span data="Ezz">ٱلْعَزِيزِ</span> <span data="Hkm">ٱلْحَكِيمِ</span> *
 مَا <span data="xlq">خَلَقْنَا</span> <span data="smw">ٱلسَّمَٰوَٰتِ</span> <span data="ArD">وَٱلْأَرْضَ</span> <span data="ara">وَمَا بَيْنَهُمَآ</span> إِلَّا <span data="Hqq">بِٱلْحَقِّ</span> <span data="Ajl">وَأَجَلٍ</span> <span data="smw">مُّسَمًّى</span> وَٱلَّذِينَ <span data="kfr">كَفَرُوا۟</span> عَمَّآ <span data="n*r">أُنذِرُوا۟</span> <span data="ErD">مُعْرِضُونَ</span><br>
-  <tr>
+  <tr id=qaf>
     <td>
 <a class=sure href="/Kuran/reader.html#v=50:1" target="iqra">50 Kaf</a>
 <span data="harf">Qâf</span>. <span data=mjd>Yüce</span> <span data=qrA>Kur’an</span>’a (yemin olsun). *
@@ -370,7 +372,7 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 <span data="harf">قٓ</span>  <span data=qrA>وَٱلْقُرْءَانِ</span> <span data=mjd>ٱلْمَجِيدِ</span>*
 بَلْ <span data=Ejb>عَجِبُوٓا۟</span> أَن <span data=jyA>جَآءَهُم</span> <span data=n*r>مُّنذِرٌ</span> مِّنْهُمْ <span data=qwl>فَقَالَ</span> <span data=kfr>ٱلْكَٰفِرُونَ</span> هَٰذَا <span data=$yA>شَىْءٌ</span> <span data=Ejb>عَجِيبٌ</span>*
 أَءِذَا <span data=mwt>مِتْنَا</span> <span data=kwn>وَكُنَّا</span> <span data=trb>تُرَابًا</span> ذَٰلِكَ <span data=rjE>رَجْعٌۢ</span> <span data=bEd>بَعِيدٌ</span><br>
-  <tr>
+  <tr id=nun>
     <td>
 <a class=sure href="/Kuran/reader.html#v=68:1" target="iqra">68 Kalem</a>
 <span data="harf">Nûn</span>. <span data=qlm>Kaleme</span> ve <span data=sTr>satır satır</span> yazdıklarına (yemin olsun). * <span data=rbb>Rabbinin</span> <span data=nEm>nimeti</span> sayesinde sen asla <span data=jnn>cinlenmiş</span> değilsin. * Senin için başa <span data=mnn>kakılmayan</span> (kesintisiz) bir <span data=Ajr>ödül</span> vardır. * Sen elbette <span data=EZm>yüce</span> bir <span data=xlq>ahlak</span> üzeresin.
@@ -397,7 +399,10 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 </pre>
 
 <h3>Referans</h3>
-<a href="https://islamansiklopedisi.org.tr/huruf-i-mukattaa" target="Kuran">TDV İslâm Ansiklopedisi</a>
+<p>
+<a href="https://islamansiklopedisi.org.tr/huruf-i-mukattaa" target="Kuran">TDV İslâm Ansiklopedisi</a></p>
+<p>
+<a href="https://kuran-ikerim.org/huruf-u-mukattaa" target="Kuran">Huruf-u Mukatta'a</a></p>
 
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
