--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -55,22 +55,20 @@
 
 <h2>Şifreli Harfler &emsp; <button class=goBack>◀</button></h2>
 
-<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz     unsuru bazı sûrelerin başındaki şifreli harfler.  Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bırakıyoruz.</p>
-<p>"Haydi, buna benzer bir söz söyleyin; kitap olmasın,
-sûre olmasın, cümle olmasın, kelime bile olmasın da
-anlamsız görünen bir tek harf olsun" diyor.</p>
+<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz unsuru bazı sûrelerin başındaki şifreli harfler. Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bırakıyoruz.</p>
+<p>"Haydi, buna benzer bir söz söyleyin; bütün bir kitap ya da sûre olmasın, cümle olmasın, kelime bile olmasın da anlamsız görünen bir tek harf olsun" diyor.</p>
 <blockquote>
 Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki:
 "Ben sizden beliğ mânâları, hükümleri, hakikatleri ifade eden yüksek hutbeleri ve nutukları istemiyorum. Yalnız şu tâdâd ettiğim harflerden bir nazîre yapınız, velev iftira ve hikâyelerden ibaret bile olursa olsun!"</blockquote>
 
-<p>Bir talebemin kıymetli gözlemi: Bu harfler, dikkat çekmek, başka kelimelerin kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Başka bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
+<p>Bir talebemin kıymetli gözlemi: Bu harfler, sûre ismi, i'caz unsuru, dikkat çekmek, başka kelimelerin kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Diğer bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
 <p>Toplam 29 sûrenin başındaki 30 ayet söz konusu. Tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
 <a href=#sad>Sâd</a>, <a href=#qaf>Qâf</a>, <a href=#nun>Nûn</a>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
 <p>Sonra iki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 7x<a href=#gafir>Hâ-Mîm</a> (10 ayet) </p>
 <p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a>, <a href=#şura>Ayn-Sîn-Qâf</a> (14 ayet) </p>
 <p>Çok harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a>, <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a> (3 ayet) </p>
-<p>Bu çalışma 7 adet Hâ-Mîm ile başlamıştı. sonra Elif-Lâm'ların eklenmesiyle 20 sûre oldu. Şimdi, 29 sûrenin ilk birkaç ayetini ve M Okuyan mealini bu sayfaya aldık. Kavramlar arasındaki ilişkiyi, kelimelere tıklayarak görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil)
-</p>
+<p>Aşağıda, şifreli harflerin bulunduğu 29 sûrenin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil.) Bu çalışma 7 adet Hâ-Mîm ile başlamıştı, şimdi hepsi tamamlandı. </p>
+
 <table id=tablo>
   <tr>
     <td>
@@ -163,7 +161,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
   <tr id=meryem>
     <td>
 <a class=sure href="/Kuran/reader.html#v=19:1" target="iqra">19 Meryem</a>
-<span data="harf">Kâf Hâ Yâ Ayn Sâd</span>. *
+<span data="harf">Kâf Hâ Yâ Ayn Sâd</span> *
 (Bu), Rabbinin Zekeriya kuluna rahmetini hatırlatmasıdır. * Hani o, gizli bir sesle Rabbine şöyle seslenmişti: * “Rabbim! Kemiklerim zayıfladı, saçım başım ağardı. Rabbim, senden isteklerim konusunda (bu zamana kadar) hiç mahrum kalmadım.”
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=19:1" target="iqra">مريم</a>
@@ -174,7 +172,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
   <tr id=taha>
     <td>
 <a class=sure href="/Kuran/reader.html#v=20:1" target="iqra">20 Taha</a>
-<span data="harf">Tâ Hâ</span>. * Biz Kur’an’ı sana sıkıntı çekesin diye indirmedik. * Yeri ve en yüksek gökleri yaratan (Allah)’ın indirmesi olarak saygı duyanlara sadece (gerçeği) hatırlatmak için (gönderdik).
+<span data="harf">Tâ Hâ</span> * Biz Kur’an’ı sana sıkıntı çekesin diye indirmedik. * Yeri ve en yüksek gökleri yaratan (Allah)’ın indirmesi olarak saygı duyanlara sadece (gerçeği) hatırlatmak için (gönderdik).
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=20:1" target="iqra">طه</a>
 <span data="harf">طه</span> *
@@ -184,7 +182,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
   <tr id=şuara>
     <td>
 <a class=sure href="/Kuran/reader.html#v=26:1" target="iqra">26 Şuara</a>
-<span data="harf">Tâ Sîn Mîm</span>. * 
+<span data="harf">Tâ Sîn Mîm</span> * 
 İşte şu(nlar), apaçık Kitabın ayetleridir. * Onlar iman etmiyor diye nerdeyse kendine yazık edeceksin! * Dilesek, üzerlerine gökten bir ayet indiririz de ona boyunları eğik kalır.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=26:1" target="iqra">الشعراء</a>
@@ -195,7 +193,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
   <tr id=neml>
     <td>
 <a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">27 Neml</a>
-<span data="harf">Tâ Sîn </span>. 
+<span data="harf">Tâ Sîn</span>. 
 İşte şu(nlar) Kur’an’ın ve apaçık Kitabın ayetleridir. * (Kur’an) müminler için bir rehber ve müjdedir. * Onlar namazı kılar, zekatı verir ve ahirete de kesin bir şekilde inanırlar.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=27:1" target="iqra">النمل</a>
@@ -205,7 +203,7 @@ Bir zaman gelecek, kâfir olanlar “Keşke biz de müslüman olsaydık.” diye
   <tr>
     <td>
 <a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">28 Kasas</a>
-<span data="harf">Tâ Sîn Mîm</span>. * 
+<span data="harf">Tâ Sîn Mîm</span> * 
 İşte şu(nlar), apaçık Kitabın ayetleridir. * İman edecek bir toplum için Musa ile Firavun’un haberinden bir kısmını sana bir amaç ile tilavet etmekteyiz (okuyup aktarmaktayız).
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">القصص</a>
@@ -269,7 +267,7 @@ Hikmetli Kur’an’a (yemin olsun) ki * Şüphesiz ki sen, elçilerdensin, * do
   <tr id=sad>
     <td>
 <a class=sure href="/Kuran/reader.html#v=38:1" target="iqra">38 Sad</a>
-<span data="harf">Sâd</span>. *
+<span data="harf">Sâd</span>.
 Zikr sahibi Kur’an’a (yemin olsun). * Aslında kâfir olanlar, (haksız) bir gurur ve ayrılık içindedir. * Onlardan önce nice nesilleri helak etmiştik de feryat etmişlerdi, (ancak) kurtulmaları mümkün değildi.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=38:1" target="iqra">ص</a>
