--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -67,7 +67,7 @@ Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakma
 <p>Sonra iki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 7x<a href=#gafir>Hâ-Mîm</a> (10 ayet) </p>
 <p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a>, <a href=#şura>Ayn-Sîn-Qâf</a> (14 ayet) </p>
 <p>Çok harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a>, <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a> (3 ayet) </p>
-<p>Aşağıda, şifreli harflerin bulunduğu 29 sûrenin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. Bu çalışma <a href="../cuma/hamim.html">7 adet Hâ-Mîm</a> ile başlamıştı, şimdi 29 sûre tamamlandı. </p>
+<p>Aşağıda, şifreli harflerin bulunduğu sûrelerin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. Bu çalışma <a href="../cuma/hamim.html">7 adet Hâ-Mîm</a> ile başlamıştı, şimdi 29 sûre tamamlandı.</p>
 
 <table id=tablo>
   <tr>
@@ -396,9 +396,10 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 19 khyES    38 S        68 n
 </pre>
 
-<h3 id=disclaimer>Sorumluluk Reddi</h3>
+<h3 id=disclaimer>Son söz</h3>
 <p>
-  Hurûf-u Mukatta'a, Kur’an-ı Kerim'de 29 sûrenin başındaki harflerdir ve haktır, hakikattır. Kitabı baştan sona okuyanlar bu harfleri de okumuş olurlar. Lakin, hurûfilikle ve hurâfelerle hiçbir ilgisi yoktur. Geleceği tahmin, falcılık, sihir, ya da başka türlü gaybi haberler için kullanılırsa, bu tamamen yapanların sorumluluğudur, bundan dolayı Şifreli Harfler bâtıl olamaz. Anlamını bilmiyoruz diye, asırlardır inkarcıları şaşırtan bu harfleri yok sayamayız.
+  Hurûf-u Mukatta'a, Kur’an-ı Kerim'de 29 sûrenin başındaki harflerdir ve haktır, hakikattır. Kitabı baştan sona okuyanlar bu harfleri de okumuş olurlar. İsim benzerliğine rağmen, hurûfilikle ve hurâfelerle hiçbir ilgisi yoktur. 
+  <!-- Geleceği tahmin, falcılık, sihir, ya da başka türlü gaybi haberler için kullanılırsa, bu tamamen yapanların sorumluluğudur, bundan dolayı Şifreli Harfler bâtıl olamaz. Anlamını bilmiyoruz diye, asırlardır inkarcıları şaşırtan bu harfleri yok sayamayız. -->
 </p>
 
 <h3>Referans</h3>
