--- a/ders/index.html
+++ b/ders/index.html
@@ -49,7 +49,8 @@
   <li><a href="/Kitap/esma/">Esmâ-i Husnâ 2023</a>
   <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a>
   <li><a href="/Kitap/cuma/geylani.html">Abdulqadir Geylani</a>
-  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (Zaman)</a>
+  <!-- <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (Zaman)</a> -->
+  <li><a href="/Kitap/cuma/inanc.html">Allah inancı (Çağrıcı)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
   <li><a href="/Kitap/cuma/iktibas.html">Şiirde iktibas sanatı</a>
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
