--- a/ders/index.html
+++ b/ders/index.html
@@ -9,7 +9,7 @@
 <title>Iqra Dersler</title>
 
 <style>
-  h2 { margin-bottom: -10px; }
+  h2 { margin-bottom: -10px; margin-top: 10px; }
   h3 { margin-bottom: 8px; }
   p, ol { margin: 8px 0; }
   .narrow, .gap {
@@ -55,7 +55,10 @@
   <li><a href="/Kitap/cuma/iktibas.html">Şiirde iktibas sanatı</a>
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
-<p>Levhalar: <a href="/Kitap/esma/Husna.html">Esmâ-i Husnâ</a></p>
+<p>Levhalar:
+  <a href="/Kitap/esma/Husna.html">Esmâ</a>  &emsp;
+  <a href="/Kitap/ders/nun-velkalem.html">Nûn</a>
+</p>
 </div>
 <!-- <div class=gap></div> -->
 <div class=narrow>
