--- a/ders/index.html
+++ b/ders/index.html
@@ -35,6 +35,7 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="huruf.html">Şifreli Harfler</a>
+  <li><a href="nun-velkalem.html">Nûn vel-kalem</a>
   <li><a href="sunum4.2.html">Benzerlik V4.2</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
 </ol>
@@ -66,6 +67,7 @@
 <p>Muhtelif konularda çalışma sayfaları</p>
 <ol>
   <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
+  <li><a href="/Kitap/cuma/salat.html">Salât nedir?</a>
   <li><a href="/Kitap/cuma/feryad.html">Enbiyanın Feryadı</a>
   <li><a href="/Kitap/cuma/medine.html">Medine Dönemi</a>
   <li><a href="/Kitap/cuma/hacc.html">Rahman'ın Konukları</a>
