--- a/cuma/index.html
+++ b/cuma/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Words from Quran" />
 <link rel="stylesheet" href="../ders/ders.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>Iqra Dersler</title>
+<title>Cuma Dersleri</title>
 
 <style>
   h2 { margin-bottom: -10px; margin-top: 10px; }
@@ -41,7 +41,7 @@
   <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
 </ol>
-<p>Videolar: <a target=Kuran
+<p>Videolar: <a target=KK
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
 Cuma Dersleri</a></p>
 
