--- a/ders/enbiya.html
+++ b/ders/enbiya.html
@@ -52,7 +52,7 @@ Zulkifl	kfl	21:85 38:48
 Âl-i İmran
 Zekeriyâ	zakariy~aA	3:37 3:38 6:85 19:2 19:7 21:89
 Yahya	yaHoyaY%60	3:39 6:85 19:7 19:12 21:90
-‘İsâ	EiysaY	2:87 2:136 2:253 3:45 3:52 3:55 3:59 3:84 4:157 4:163 4:171 5:46 5:78 5:110 5:112 5:114 5:116 6:85 19:34 33:7 42:13 43:63 57:27 61:6 61:14 <br>el-mesîh 5:17 5:72 5:75 9:30 9:31
+‘İsâ	EiysaY	2:87 2:136 2:253 3:45 3:52 3:55 3:59 3:84 4:157 4:163 4:171 5:46 5:78 5:110 5:112 5:114 5:116 6:85 19:34 33:7 42:13 43:63 57:27 61:6 61:14 <br>el-mesîh 4:172 5:17 5:72 5:75 9:30 9:31
 Nebilerin mühürü <a name="v=33:56&r=Slw">SAS<a>
 Muhammed	Hmd	3:144 33:40 47:2 48:29 Ahmed 61:6`
 
