--- a/esma/index.html
+++ b/esma/index.html
@@ -55,7 +55,7 @@
 
 <h3>Esmâ-i Husnâ &emsp;<button id=dersler>◀</button></h3>
 <script>
-  dersler.onclick = () => {location.pathname = "/Kitap/ders/"}
+  dersler.onclick = () => {location.pathname = "/Kitap/"}
 </script>
 <p>Hicri 1444 (2023) Ramazan ayında her gün iki güzel isim hatırlayalım, güzel levhalarda nasıl yazıldıklarını görelim, Kitap'taki yerlerini bulalım.
 </p>
