--- a/garibce/index.html
+++ b/garibce/index.html
@@ -28,7 +28,10 @@
 </style>
 <title>Garibce iktibaslar</title>
 
-<h2>Garibce'den Seçmeler</h2>
+<h2>Garibce'den Seçmeler &emsp;<button id=dersler>◀</button></h2>
+<script>
+  dersler.onclick = () => {location.pathname = "/Kitap/"}
+</script>
 
 <p><a href=https://garibce.blogspot.com/ target=Kuran>garibce.blogspot.com</a> sitesinden iktibaslar</p>
 <ol>
