--- a/rama/index.html
+++ b/rama/index.html
@@ -41,7 +41,10 @@
   </style>
   <body>
 
-<h3>Ramazan 30 Gün</h3>
+<h3>Ramazan 30 Gün &emsp;<button id=dersler>◀</button></h3>
+<script>
+  dersler.onclick = () => {location.pathname = "/Kitap/"}
+</script>
 <ol>
   <li><a href="bismillah.html">Bismillah her hayrın başıdır</a></li>
   <li>1. <a href="nura.html">Karanlıklardan Nûra</a></li>
