--- a/cuma/index.html
+++ b/cuma/index.html
@@ -11,7 +11,7 @@
 <style>
   h2 { margin-bottom: -10px; margin-top: 10px; }
   h3 { margin-bottom: 8px; }
-  p, ol { margin: 8px 0; }
+  p, ul { margin: 8px 0; }
   .narrow, .gap {
     display: inline-block;
     vertical-align: top;
@@ -24,12 +24,15 @@
 </style>
 
 <body>
-<h2>Iqra &ndash; Cuma</h2>
+<h2>Iqra &ndash; Cuma &emsp;<button id=dersler>◀</button></h2>
+<script>
+  dersler.onclick = () => {location.pathname = "/Kitap/"}
+</script>
 
 <div class=narrow>
 <h3>Cuma Dersleri</h3>
 <p>Muhtelif konularda çalışma sayfaları</p>
-<ol>
+<ul>
   <li><a href="rabler.html">Allah bir, rabler çok</a>
   <li><a href="salat.html">Salât nedir?</a>
   <li><a href="feryad.html">Enbiyanın Feryadı</a>
@@ -37,13 +40,22 @@
   <li><a href="hacc.html">Rahman'ın Konukları</a>
   <li><a href="kurban.html">Kurban Yakınlıktır</a>
   <li><a href="hamim.html">Hâ-Mîm Sureleri</a>
-  <li><a href="/Kitap/ders/sunum4.2.html">Benzerlik V4.2</a>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
-</ol>
+</ul>
 <p>Videolar: <a target=KK
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
 Cuma Dersleri</a></p>
-
 </div>
+<div class=gap> </div>
+<div class=narrow>
+<h3>Alıntılar</h3>
+<p>Muhtelif yazarlardan örnek alıntılar</p>
+<ul>
+  <li><a href="adalet.html">Adalet ve ibadet</a>
+  <li><a href="geylani.html">Abdulqadir Geylani</a>
+  <li><a href="quest.html">Self-Knowledge (Zaman)</a>
+  <li><a href="inanc.html">Allah inancı (Çağrıcı)</a>
+  <li><a href="iktibas.html">Şiirde iktibas sanatı</a>
+</ul>
+</div>
+
 </body>
