--- a/cuma/adalet.html
+++ b/cuma/adalet.html
@@ -22,5 +22,5 @@ Sözün kısası, sûreleri, kıssaları, âyetleri ve emirleriyle Kur’ân, ad
 </div>
 <p class=it>Yazının sonu <a href="https://serbestiyet.com/featured/zafer-zafer-buyuyen-bir-yenilgi-38917/" target="Kuran">burada</a> - Metin Karabaşoğlu - 11 Ağustos 2020</p>
 <p>Dersler 
-  <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+  <button onclick="location.pathname='/Kitap/cuma/'">◀</button>
 </p>
