--- a/cuma/feryad.html
+++ b/cuma/feryad.html
@@ -54,7 +54,7 @@
 • M İslamoğlu, <a href="https://kuranmeali.com/Aciklama.php?meal=islamoglu&sureno=28&ayet=24" target=Kuran>Hz Musa’nın “bittim” noktası</a>
 </p>
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
 </body>
