--- a/cuma/geylani.html
+++ b/cuma/geylani.html
@@ -316,7 +316,7 @@ The eyes do not perceive Him,  but He perceives the eyes. (6:103)
 • Louay Fatoohi <a href="https://www.safispub.com/sufism/fifteen-letters-khamsata-ashara-maktuban/" target="Kuran">İngilizceye çevirmiş</a> <span class=wide>-- 2008</span>
 </p>
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button onclick="location.pathname='/Kitap/cuma/'">◀</button>
 </p>
 <script>
 const EXP = /\n(.+)\((.+)\)/g
