--- a/cuma/hamim.html
+++ b/cuma/hamim.html
@@ -155,7 +155,7 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 <script>
 "use strict";
 function goBack() {
-    location.pathname = "/Kitap/ders/"
+    location.pathname = "/Kitap/cuma"
 }
 for (let b of document.querySelectorAll('.goBack'))
     b.onclick = goBack
