--- a/cuma/inanc.html
+++ b/cuma/inanc.html
@@ -52,6 +52,6 @@ Bağlamını ve üslup tarzını dikkate alarak okuduğumuzda Kur’an’ın bü
 </div>
 
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
