--- a/cuma/kurban.html
+++ b/cuma/kurban.html
@@ -61,7 +61,7 @@ Allâhu ekber, velillâhil-hamd</b>
 (<a href="https://www.vuslat.org.tr/kurban-ile-ilgili-ayetler-ve-hadisler" target="Kuran">Tirmizî ve İbn Mace</a>)
 </p>
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
 </body>
