--- a/cuma/medine.html
+++ b/cuma/medine.html
@@ -62,7 +62,7 @@
 • 632 <a href="https://islamansiklopedisi.org.tr/veda-hacci" target=Kuran>Veda haccı</a>: ayrılış
 </p>
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
 </body>
