--- a/cuma/quest.html
+++ b/cuma/quest.html
@@ -34,6 +34,6 @@ It is important to understand that the potential within the seed is only realize
 </div><hr>
 
 <p>Dersler 
-    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+    <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
