--- a/cuma/rabler.html
+++ b/cuma/rabler.html
@@ -74,7 +74,7 @@
 "<span class=rab>Rabbim</span>! Bana hükümranlık verdin, olayların yorumunu öğrettin. Ey göklerin ve yerin yaradanı! Dünya ve ahirette işlerimi yoluna koyan sensin; canımı müslüman olarak al ve beni salihlere kat."</a></div>
 <div>Böylece, surenin başındaki yorum aynen hakikat oluyor...</div>
 <p>Dersler 
-  <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+  <button onclick="location.pathname='/Kitap/cuma/'">◀</button>
 </p><hr>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/icd7gHE5xyo" 
   title="YouTube video player" frameborder="0"  allowfullscreen
