add YouTube links

--- a/cuma/index.html
+++ b/cuma/index.html
@@ -3,8 +3,8 @@
 <meta charset="UTF-8">
 <meta name="viewport"    content="width=device-width">
 <meta name="author"      content="M A Eyler, Istanbul, 2021" />
-<meta name="description" content="Words from Quran" />
-<link rel="stylesheet" href="../ders/ders.css" media="all">
+<meta name="description" content="Friday lectures" />
+<link rel="stylesheet" href="cuma.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
 <title>Cuma Dersleri</title>
 
@@ -31,7 +31,7 @@
 
 <div class=narrow>
 <h3>Cuma Dersleri</h3>
-<p>Muhtelif konularda çalışma sayfaları</p>
+<p>Kur'an ayetlerinde örnek çalışmalar</p>
 <ul>
   <li><a href="rabler.html">Allah bir, rabler çok</a>
   <li><a href="salat.html">Salât nedir?</a>
@@ -43,7 +43,9 @@
 </ul>
 <p>Videolar: <a target=KK
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
-Cuma Dersleri</a></p>
+Son 30</a> &emsp; <a target=KK
+href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">YouTube</a>
+</p>
 </div>
 <div class=gap> </div>
 <div class=narrow>
