--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
 <p>Yazılımı uygulayan web sayfaları</p>
 <ul>
   <li>2020 <a href="/Kitap/cuma/">Cuma Dersleri</a>
-  <li>2021 <a href="/Kitap/rama/">Ramazan Notları</a>
   <li>2021 <a href="/Kitap/ders/">Iqra -- Dersler</a>
+  <li>2021 <a href="/Kitap/rama/">Ramazan Notları</a>
   <li>2022 <a href="/Kitap/garibce/">Garibce Seçmeler</a>
   <li>2023 <a href="/Kitap/esma/">Esmâ-i Husnâ</a>
   <li>2023 <a href="/Kitap/esma/Husna.html">Esmâ levhaları</a>
-  <li>Videolar: <a target=KK
-  href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrruvsdTEmNMOLt0PJALyahUNX">
-  Iqra Yazılımı</a></p>
 </ul>
+<p>Videolar: <a target=KK
+  href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrruvsdTEmNMOLt0PJALyahUNX">
+  2020</a> &emsp;
+  <a target=KK
+  href="https://maeyler.github.io/JS/api/YouTube#PLqPY2DLsMnVDkZXDSMCDLwzWB9CnfX6Ds">
+  2023</a></p>
 </div>
 <div class=gap> </div>
 <div class=narrow>
