--- a/ders/index.html
+++ b/ders/index.html
@@ -37,10 +37,11 @@
   <li><a href="enbiya.html">Peygamberler</a>
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
-  <li><a href="huruf.html">Şifreli Harfler</a>
+  <li><a href="huruf.html">Şifreli harfler</a>
   <li><a href="sunum4.2.html">Benzerlik V4.2</a>
   <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
+  <li><a href="blok.html">Benzerlik blokları</a>
 </ul>
 </div>
 <div class=gap> </div>
