--- a/ders/benzer.html
+++ b/ders/benzer.html
@@ -6,22 +6,23 @@
 <meta name="description" content="Words from Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>Benzerlik Blokları </title>
+<title>Benzerlik Öbekleri </title>
 <style>
     pre {
         text-wrap: wrap;
     }
 </style>
-<h3>Benzerlik Blokları &emsp; <button class=goBack>◀</button></h3>
+<h3>Benzerlik Öbekleri &emsp; <button class=goBack>◀</button></h3>
 
 <p>Sure:Ayet <input type=search id=inp size=10 />&ensp;
 <button id=bul>Bul</button>&ensp;
 <button id=sil>Sil</button>&ensp;
 <button id=und>&lt;</button>&ensp;
 <pre id=out></pre>
-<p>Örnek olarak seçilen 37:76 ayeti, buna benzeyen diğer iki ayetle birlikte üçlü bir blok içinde bulunur. Blokların çoğu ayet çiftleri olmakla birlikte, yüzlerce ayet içeren benzerlik blokları var. 
-<p>Küçük blok örnekleri: <br>
+<p>Burada seçilen 37:76 ayeti, kendisine benzeyen diğer iki ayetle birlikte üçlü bir öbek içinde bulunur. Benzerlik öbeklerinin çoğu ayet çiftleri olmakla birlikte, yüzlerce ayet içeren bir öbek de var. 
+<p>Küçük benzerlik öbekleri: <br>
     İkili --  <a href="/Kuran/reader.html#v=21:7" target="iqra">21:7</a><br>
+    Üçlü --   <a href="/Kuran/reader.html#v=78:6" target="iqra">78:6</a><br>
     Beşli --  <a href="/Kuran/reader.html#v=17:2" target="iqra">17:2</a><br>
     Yedili -- <a href="/Kuran/reader.html#v=43:1" target="iqra">43:1</a><br>
     Onlu --   <a href="/Kuran/reader.html#v=36:4" target="iqra">36:4</a><br>
