--- a/ders/index.html
+++ b/ders/index.html
@@ -41,7 +41,7 @@
   <li><a href="sunum4.2.html">Benzerlik V4.2</a>
   <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
-  <li><a href="blok.html">Benzerlik blokları</a>
+  <li><a href="benzer.html">Benzerlik öbekleri</a>
 </ul>
 </div>
 <div class=gap> </div>
